src/test/deca/context/invalid/homemade/cond_non_bool.deca
// Description :
//test of a non boolean condition
//
// Resultats :
//Erreur contextuelle
//Ligne <12> : <Condition is not boolean>
{
   string a = "abdc";
   string b="gjkl";

   // Doit etre refuse.
   while("abdc"){
    b=a;
   }
}